--- a/printer.ipynb
+++ b/printer.ipynb
@@ -2,80 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "outside-binary",
+   "execution_count": 1,
+   "id": "handmade-packet",
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "What is your name? Ringo\n",
-      "What is your age? 58\n"
+      "What is your name? FRANKie\n",
+      "What is your age? 18\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n",
-      "Ringo\n"
+      "FRANKie\n",
+      "FRANKie\n",
+      "FRANKie\n",
+      "FRANKie\n",
+      "FRANKie\n",
+      "FRANKie\n",
+      "FRANKie\n",
+      "FRANKie\n",
+      "FRANKie\n",
+      "FRANKie\n",
+      "FRANKie\n",
+      "FRANKie\n",
+      "FRANKie\n",
+      "FRANKie\n",
+      "FRANKie\n",
+      "FRANKie\n",
+      "FRANKie\n",
+      "FRANKie\n"
      ]
     }
    ],
@@ -111,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "concrete-voluntary",
+   "id": "royal-politics",
    "metadata": {},
    "outputs": [],
    "source": []
